--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,11 @@ jobs:
       - run:
           name: Push Docker Image
           command: |
+            SHORT_HASH=$(echo $CIRCLE_SHA1 | cut -c -7)
             echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$SHORT_HASH
             docker push $IMAGE_NAME:latest
+            docker push $IMAGE_NAME:$SHORT_HASH
 workflows:
   version: 2
   build-master:
