--- a/kube/01-simple-app-deployment.yaml
+++ b/kube/01-simple-app-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: simple-app
-          image: atishayshukla/simple-app:latest
+          image: atishayshukla/simple-app:$SHORT_HASH
           ports:
             - containerPort: 80
               name: http
