--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,9 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/buildpack-deps:stretch
+    - image: circleci/buildpack-deps:stretch
     environment:
-      IMAGE_NAME: atishayshukla/simple-app
+    IMAGE_NAME: atishayshukla/simple-app
     working_directory: ~/app
     steps:
       - checkout
@@ -21,6 +21,18 @@ jobs:
             docker tag $IMAGE_NAME:latest $IMAGE_NAME:$SHORT_HASH
             docker push $IMAGE_NAME:latest
             docker push $IMAGE_NAME:$SHORT_HASH
+      - run:
+          name: Install envsubst
+          command: |
+            sudo apt-get update && sudo apt-get -y install gettext-base
+      - run:
+          name: Install kubectl
+          command: |
+            curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
+            chmod u+x ./kubectl
+      - run:
+          name: Deploy Code
+          command: ./scripts/ci-deploy.sh
 workflows:
   version: 2
   build-master:
