--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-    - image: circleci/buildpack-deps:stretch
+    - image: circleci/buildpack-deps
     environment:
       IMAGE_NAME: atishayshukla/simple-app
     working_directory: ~/app
