--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-    - image: circleci/buildpack-deps
+    - image: circleci/buildpack-deps:stretch
     environment:
       IMAGE_NAME: atishayshukla/simple-app
     working_directory: ~/app
@@ -32,7 +32,8 @@ jobs:
             chmod u+x ./kubectl
       - run:
           name: Deploy Code
-          command: ./scripts/ci-deploy.sh
+          command: |
+            ./scripts/ci-deploy.sh
 workflows:
   version: 2
   build-master:
