--- a/kube/03-simple-app-ingress.yaml
+++ b/kube/03-simple-app-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: ingress-jira-web
+  name: ingress-simple-app
 spec:
   rules:
   - host: simple-app.kubernetes.learn-devops.xyz
